<resources>
    <string name="app_name">CountryGeoDirectory</string>
    <string name="capital">Capital</string>
    <string name="subregion">Subregion</string>
    <string name="demonim">Demonim</string>
    <string name="population">Population</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="search">Search</string>
    <string name="loading...">loading…</string>

</resources>