<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_grey">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >

     <ImageView
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:id="@+id/flag_icon_big"
         android:layout_marginTop="48dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:src="@drawable/ic_falg_ex"
         />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/country_name_big"
            app:layout_constraintTop_toBottomOf="@id/flag_icon_big"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="KAZAKHSTAN"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            android:gravity="center"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/capital_txt"
            app:layout_constraintTop_toBottomOf="@id/country_name_big"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/capital"
            android:textSize="@dimen/text_size"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subregion_txt"
            app:layout_constraintTop_toBottomOf="@id/capital_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/subregion"
            android:textSize="@dimen/text_size"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/demonim_txt"
            app:layout_constraintTop_toBottomOf="@id/subregion_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/demonim"
            android:textSize="@dimen/text_size"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/population_txt"
            app:layout_constraintTop_toBottomOf="@id/demonim_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/population"
            android:textSize="@dimen/text_size"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/language_txt"
            app:layout_constraintTop_toBottomOf="@id/population"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/language"
            android:textSize="@dimen/text_size"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currency_txt"
            app:layout_constraintTop_toBottomOf="@id/language"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/currency"
            android:textSize="@dimen/text_size"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginLeft="@dimen/margin_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/capital"
            app:layout_constraintTop_toTopOf="@id/capital_txt"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_horizontal"
            tools:text="Capitasdfsdfl"
            android:gravity="end"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subregion"
            app:layout_constraintTop_toTopOf="@id/subregion_txt"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_horizontal"
            tools:text="Eurasia"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:gravity="end"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/demonim"
            app:layout_constraintTop_toTopOf="@id/demonim_txt"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_horizontal"
            tools:text="Kazakh"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:gravity="end"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/population"
            app:layout_constraintTop_toTopOf="@id/population_txt"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_horizontal"
            tools:text="17 000 000"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:gravity="end"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/language"
            app:layout_constraintTop_toTopOf="@id/language_txt"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_horizontal"
            tools:text="Kazakh"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:gravity="end"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currency_symbol"
            app:layout_constraintTop_toTopOf="@id/currency_txt"
            app:layout_constraintRight_toLeftOf="@id/currency"
            android:layout_marginRight="8dp"
            tools:text="T"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:gravity="end"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currency"
            app:layout_constraintTop_toTopOf="@id/currency_txt"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/margin_horizontal"
            tools:text="tenge"
            android:textSize="@dimen/text_size"
            android:gravity="end"
            android:textStyle="bold"

            />






    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>